// ------------------------------------------------------------
// Copyright (c) Microsoft Corporation.
// Licensed under the MIT License.
// ------------------------------------------------------------

syntax = "proto3";

package dapr.proto.dapr.v1;

import "google/protobuf/empty.proto";
import "dapr/proto/common/v1/common.proto";

option csharp_namespace = "Dapr.Client.Autogen.Grpc.v1";
option java_outer_classname = "DaprProtos";
option java_package = "io.dapr.v1";
option go_package = "github.com/dapr/dapr/pkg/proto/dapr/v1";

// Dapr service provides APIs to user application to access Dapr building blocks.
service Dapr {
  rpc PublishEvent(PublishEventRequest) returns (google.protobuf.Empty) {}
  rpc InvokeService(InvokeServiceRequest) returns (common.v1.InvokeResponse) {}
  rpc InvokeBinding(InvokeBindingRequest) returns (google.protobuf.Empty) {}
  rpc GetState(GetStateRequest) returns (GetStateResponse) {}
  rpc GetSecret(GetSecretRequest) returns (GetSecretResponse) {}
  rpc SaveState(SaveStateRequest) returns (google.protobuf.Empty) {}
  rpc DeleteState(DeleteStateRequest) returns (google.protobuf.Empty) {}
}

// InvokeServiceRequest represents the request message for Service invocation.
message InvokeServiceRequest {
  // id specifies callee's app id.
  //
  // This field is required.
  string id = 1;

  // message which will be delivered to callee.
  // 
  // This field is required.
  common.v1.InvokeRequest message = 3;
}

message DeleteStateRequest {
  string store_name = 1;
  string key = 2;
  string etag = 3;
  common.v1.StateOptions options = 4;
}

message SaveStateRequest {
  string store_name = 1;
  repeated common.v1.StateRequest requests = 2;
}

message GetStateRequest {
  string store_name = 1;
  string key = 2;
  string consistency = 3;
}

message GetStateResponse {
  bytes data = 1;
  string etag = 2;
}

message GetSecretRequest {
  string store_name = 1;
  string key = 2;
  map<string,string> metadata = 3;
}

message GetSecretResponse {
  map<string,string> data = 1;
}

message InvokeBindingRequest {
  string name = 1;
  bytes data = 2;
  map<string,string> metadata = 3;
}

message PublishEventRequest {
  string topic = 1;
  bytes data = 2;
}
